upload screen functionality working

--- a/csq_interface/templates/base.html
+++ b/csq_interface/templates/base.html
@@ -29,8 +29,8 @@
 </head>
 
 <body>
-    <div id="sidebar">
-        {% block sidebar %}
+    <div id="user">
+        {% block user %}
         {% endblock %}
     </div>
 
